add carousel in section tastes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,60 @@
                 <p class="text__we-have">From strawberry to coconut, we have them all!</p>
             </div>
             <div class="tastes__cards">
-                <div class="card__ice-cream">
+                
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <div class="card__ice-cream">
+                            <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
+                            <h3 class="ice-cream__name">Strawberry Gem</h3>
+                            <p class="ice-cream__description">fruity and fresh</p>
+                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card__ice-cream">
+                            <img class="ice-cream__img" src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
+                            <h3 class="ice-cream__name">Choco & Hazelnut</h3>
+                            <p class="ice-cream__description">rich sweet taste</p>
+                            <p class="ice-cream__price"><span class="price__numbers">$ 5 </span> / ball</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card__ice-cream">
+                            <img class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
+                            <h3 class="ice-cream__name">Blue Paradise</h3>
+                            <p class="ice-cream__description">sour and fruity</p>
+                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card__ice-cream">
+                            <img class="ice-cream__img" src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
+                            <h3 class="ice-cream__name">Mango Dream§</h3>
+                            <p class="ice-cream__description">classic tropic taste</p>
+                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card__ice-cream">
+                            <img class="ice-cream__img" src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
+                            <h3 class="ice-cream__name">Pistachio Heaven</h3>
+                            <p class="ice-cream__description">cream nutty flavor</p>
+                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                <!-- <div class="card__ice-cream">
                     <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
@@ -105,7 +158,7 @@
                     <h3 class="ice-cream__name">Pistachio Heaven</h3>
                     <p class="ice-cream__description">cream nutty flavor</p>
                     <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
-                </div>
+                </div> -->
             </div>
             <div class="mask-yellow-button">
                 <a class="mask-yellow-button__block" href="https://93qs8.weblium.site/menu">
