fixed a bug with the carousel in the tastes section

--- a/index.html
+++ b/index.html
@@ -80,43 +80,53 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="card__ice-cream">
-                            <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
-                            <h3 class="ice-cream__name">Strawberry Gem</h3>
-                            <p class="ice-cream__description">fruity and fresh</p>
-                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                        <div class="card-border">
+                            <div class="card__ice-cream">
+                                <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
+                                <h3 class="ice-cream__name">Strawberry Gem</h3>
+                                <p class="ice-cream__description">fruity and fresh</p>
+                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                            </div>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card__ice-cream">
-                            <img class="ice-cream__img" src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
-                            <h3 class="ice-cream__name">Choco & Hazelnut</h3>
-                            <p class="ice-cream__description">rich sweet taste</p>
-                            <p class="ice-cream__price"><span class="price__numbers">$ 5 </span> / ball</p>
+                        <div class="card-border">
+                            <div class="card__ice-cream">
+                                <img class="ice-cream__img" src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
+                                <h3 class="ice-cream__name">Choco & Hazelnut</h3>
+                                <p class="ice-cream__description">rich sweet taste</p>
+                                <p class="ice-cream__price"><span class="price__numbers">$5 </span> / ball</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card-border">
+                            <div class="card__ice-cream">
+                                <img class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
+                                <h3 class="ice-cream__name">Blue Paradise</h3>
+                                <p class="ice-cream__description">sour and fruity</p>
+                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                            </div>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card__ice-cream">
-                            <img class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
-                            <h3 class="ice-cream__name">Blue Paradise</h3>
-                            <p class="ice-cream__description">sour and fruity</p>
-                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                        <div class="card-border">
+                            <div class="card__ice-cream">
+                                <img class="ice-cream__img" src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
+                                <h3 class="ice-cream__name">Mango Dream§</h3>
+                                <p class="ice-cream__description">classic tropic taste</p>
+                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                            </div>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card__ice-cream">
-                            <img class="ice-cream__img" src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
-                            <h3 class="ice-cream__name">Mango Dream§</h3>
-                            <p class="ice-cream__description">classic tropic taste</p>
-                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="card__ice-cream">
-                            <img class="ice-cream__img" src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
-                            <h3 class="ice-cream__name">Pistachio Heaven</h3>
-                            <p class="ice-cream__description">cream nutty flavor</p>
-                            <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                        <div class="card-border">
+                            <div class="card__ice-cream">
+                                <img class="ice-cream__img" src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
+                                <h3 class="ice-cream__name">Pistachio Heaven</h3>
+                                <p class="ice-cream__description">cream nutty flavor</p>
+                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                            </div>
                         </div>
                       </div>
                     </div>
