--- a/index.html
+++ b/index.html
@@ -15,19 +15,34 @@
 <body>
     <!-- Olkhovyk Anastasiia -->
     <header class="header">
-        <nav class="header__nav">
-            <div class="header__nav-left">
-                <a href="#" class="header__nav-item">About us</a>
-                <a href="#" class="header__nav-item">Menu</a>
-                <a href="#" class="header__nav-item">Special</a>
-            </div>
-            <div class="header__nav-image">
-                <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
-            </div>
-            <div class="header__nav-right">
-                <a href="#ingredients" class="header__nav-item">Ingredients</a>
-                <a href="#blog" class="header__nav-item">Blog</a>
-                <a href="#" class="header__nav-item">Contacts</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent container">
+            <a class="nav-item nav-link navbar-brand d-block d-lg-none" href="#">
+                <div class="header__nav-image">
+                    <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav w-100 justify-content-between d-lg-flex">
+                    <div class="w-100 d-lg-flex justify-content-around">
+                        <a class="nav-item nav-link align-self-center" href="#">About us</a>
+                        <a class="nav-item nav-link align-self-center" href="#">Menu</a>
+                        <a class="nav-item nav-link align-self-center" href="#">Special</a>
+                    </div>
+                    <a class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block" href="#">
+                        <div class="header__nav-image">
+                            <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
+                        </div>
+                    </a>
+                    <div class="w-100 d-lg-flex justify-content-around">
+                        <a class="nav-item nav-link align-self-center" href="#ingredients">Ingredients</a>
+                        <a class="nav-item nav-link align-self-center" href="#blog">Blog</a>
+                        <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
+                    </div>
+                </div>
             </div>
         </nav>
         <section class="main-page">
@@ -407,6 +422,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js "
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin=" anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js "
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV "
+        crossorigin="anonymous "></script>
 </body>
 
 </html>
