--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                 </div>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
-            </button>
+            </div>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav w-100 justify-content-between d-lg-flex">
                     <div class="w-100 d-lg-flex justify-content-around">
@@ -91,69 +91,76 @@
                 <p class="text__we-have">From strawberry to coconut, we have them all!</p>
             </div>
             <div class="tastes__cards">
-                
+
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <div class="card-border">
-                            <div class="card__ice-cream">
-                                <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
-                                <h3 class="ice-cream__name">Strawberry Gem</h3>
-                                <p class="ice-cream__description">fruity and fresh</p>
-                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                        <div class="carousel-item active">
+                            <div class="card-border">
+                                <div class="card__ice-cream">
+                                    <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png"
+                                        alt="strawberry ice cream">
+                                    <h3 class="ice-cream__name">Strawberry Gem</h3>
+                                    <p class="ice-cream__description">fruity and fresh</p>
+                                    <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                                </div>
                             </div>
                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="card-border">
-                            <div class="card__ice-cream">
-                                <img class="ice-cream__img" src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
-                                <h3 class="ice-cream__name">Choco & Hazelnut</h3>
-                                <p class="ice-cream__description">rich sweet taste</p>
-                                <p class="ice-cream__price"><span class="price__numbers">$5 </span> / ball</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="card-border">
-                            <div class="card__ice-cream">
-                                <img class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
-                                <h3 class="ice-cream__name">Blue Paradise</h3>
-                                <p class="ice-cream__description">sour and fruity</p>
-                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                        <div class="carousel-item">
+                            <div class="card-border">
+                                <div class="card__ice-cream">
+                                    <img class="ice-cream__img" src="img/tastes/choco-ice-cream.png"
+                                        alt="choco ice cream">
+                                    <h3 class="ice-cream__name">Choco & Hazelnut</h3>
+                                    <p class="ice-cream__description">rich sweet taste</p>
+                                    <p class="ice-cream__price"><span class="price__numbers">$5 </span> / ball</p>
+                                </div>
                             </div>
                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="card-border">
-                            <div class="card__ice-cream">
-                                <img class="ice-cream__img" src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
-                                <h3 class="ice-cream__name">Mango Dream§</h3>
-                                <p class="ice-cream__description">classic tropic taste</p>
-                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                        <div class="carousel-item">
+                            <div class="card-border">
+                                <div class="card__ice-cream">
+                                    <img class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png"
+                                        alt="blueberry ice cream">
+                                    <h3 class="ice-cream__name">Blue Paradise</h3>
+                                    <p class="ice-cream__description">sour and fruity</p>
+                                    <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                                </div>
                             </div>
                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <div class="card-border">
-                            <div class="card__ice-cream">
-                                <img class="ice-cream__img" src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
-                                <h3 class="ice-cream__name">Pistachio Heaven</h3>
-                                <p class="ice-cream__description">cream nutty flavor</p>
-                                <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                        <div class="carousel-item">
+                            <div class="card-border">
+                                <div class="card__ice-cream">
+                                    <img class="ice-cream__img" src="img/tastes/mongo-ice-cream.png"
+                                        alt="mongo ice cream">
+                                    <h3 class="ice-cream__name">Mango Dream§</h3>
+                                    <p class="ice-cream__description">classic tropic taste</p>
+                                    <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                                </div>
                             </div>
                         </div>
-                      </div>
+                        <div class="carousel-item">
+                            <div class="card-border">
+                                <div class="card__ice-cream">
+                                    <img class="ice-cream__img" src="img/tastes/cream-nutty-flavor.png"
+                                        alt="cream nutty flavor">
+                                    <h3 class="ice-cream__name">Pistachio Heaven</h3>
+                                    <p class="ice-cream__description">cream nutty flavor</p>
+                                    <p class="ice-cream__price"><span class="price__numbers">$5</span> / ball</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
+                </div>
                 <!-- <div class="card__ice-cream">
                     <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
@@ -504,10 +511,10 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js "
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin=" anonymous "></script>
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js "
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV "
-        crossorigin="anonymous "></script>
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
