add css overview-menu

--- a/index.html
+++ b/index.html
@@ -45,23 +45,28 @@
     <main>
         <!-- Pavlo Semenyshyn-->
         <section class="overview-menu">
-            <div class="overview-desserts">
-                <h3>Desserts</h3>
-                <div class="overview-desserts__button">
-                    <a href="#menu" class="button-link__desserts"> View Menu</a>
+            <div class="overview-menu__block">
+                <div class="overview-desserts">
+                    <h3 class="overview-desserts__text">Desserts</h3>
+                    <div class="overview-desserts__button">
+                        <a href="#menu" class="button-link__desserts"> View Menu</a>
+                    </div>
                 </div>
             </div>
-            <div class="milk-shakes">
-                <h3>Milk Shakes</h3>
-                <div class="overview-milk-shakes__button">
-                    <a href="#menu" class="button-link__shakes"> View Menu</a>
+            <div class="overview-menu__block-shakes">
+                <div class="milk-shakes">
+                    <h3 class="overview-menu__shakes-text">Milk Shakes</h3>
+                    <div class="overview-milk-shakes__button">
+                        <a href="#menu" class="button-link__shakes"> View Menu</a>
+                    </div>
                 </div>
             </div>
-
-            <div class="ice-cream">
-                <h3>Ice Cream</h3>
-                <div class="overview-ice-cream__button">
-                    <a href="#menu" class="button-link__ice-cream"> View Menu</a>
+            <div class="overview-menu__ice-cream">
+                <div class="ice-cream">
+                    <h3 class="overview-menu__ice-cream-text">Ice Cream</h3>
+                    <div class="overview-ice-cream__button">
+                        <a href="#menu" class="button-link__ice-cream"> View Menu</a>
+                    </div>
                 </div>
             </div>
         </section>
