add role attribute to div in header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                 </div>
             </a>
-            <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
             </div>
