--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             </h1>
             <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
             </p>
-            <div class="main-page__about-cafe-button">
-                <a href="#" class="about-cafe-link">About Cafe</a>
+            <div class="main-page__about-cafe-button mask-yellow-button__block">
+                <a href="#" class="about-cafe-link block__text-style">About Cafe</a>
             </div>
-            <div class="main-page__our-menu-button">
-                <a href="#menu" class="button-link">Our Menu</a>
+            <div class="main-page__our-menu-button main-btn">
+                <a href="#menu" class="button-link main-btn__text">Our Menu</a>
             </div>
         </section>
     </header>
