--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </nav>
-        <section class="main-page">
+        <section class="main-page container">
             <h1 class="main-page__title"><span>Welcome to</span><br>
                 Mr. Snowman Cafe
             </h1>
