add about-us css

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <p class="about-us__sub-title">Our Story</p>
             <p class="about-us__text">Our mission is to offer the best experience and the tastiest desserts to our
                 clients.</p>
-            <p class="about-us__text">We are Mr. Snowman, a small yet cozy NY cafe network. We have been handcrafting
+            <p class="about-us__main-text">We are Mr. Snowman, a small yet cozy NY cafe network. We have been handcrafting
                 the most delicious
                 ice cream since 1999, and these days, our menu is more varied than ever before. Come to us to enjoy
                 various ice cream flavors and try our seasonal and holiday desserts and drinks.</p>
