--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Olkhovyk Anastasiia -->
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent container">
+        <nav class="navbar navbar-expand-lg bg-transparent container">
             <a class="nav-item nav-link navbar-brand d-block d-lg-none" href="#">
                 <div class="header__nav-image">
                     <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
@@ -51,11 +51,13 @@
             </h1>
             <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
             </p>
-            <div class="main-page__about-cafe-button mask-yellow-button__block">
-                <a href="#" class="about-cafe-link block__text-style">About Cafe</a>
-            </div>
-            <div class="main-page__our-menu-button main-btn">
-                <a href="#menu" class="button-link main-btn__text">Our Menu</a>
+            <div class="main-page__btn-flex">
+                <div class="main-page__about-cafe-button mask-yellow-button__block">
+                    <a href="#about-us" class="about-cafe-link block__text-style">About Cafe</a>
+                </div>
+                <div class="main-page__our-menu-button main-btn">
+                    <a href="#menu" class="button-link main-btn__text">Our Menu</a>
+                </div>
             </div>
         </section>
     </header>
@@ -369,7 +371,8 @@
             <p class="about-us__sub-title">Our Story</p>
             <p class="about-us__text">Our mission is to offer the best experience and the tastiest desserts to our
                 clients.</p>
-            <p class="about-us__main-text">We are Mr. Snowman, a small yet cozy NY cafe network. We have been handcrafting
+            <p class="about-us__main-text">We are Mr. Snowman, a small yet cozy NY cafe network. We have been
+                handcrafting
                 the most delicious
                 ice cream since 1999, and these days, our menu is more varied than ever before. Come to us to enjoy
                 various ice cream flavors and try our seasonal and holiday desserts and drinks.</p>
