remove coment in block tastes and rename yellow button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
             </p>
             <div class="main-page__btn-flex">
-                <div class="main-page__about-cafe-button mask-yellow-button__block">
+                <div class="main-page__about-cafe-button mask-additional-button__block">
                     <a href="#about-us" class="about-cafe-link block__text-style">About Cafe</a>
                 </div>
                 <div class="main-page__our-menu-button main-btn">
@@ -168,39 +168,9 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <!-- <div class="card__ice-cream">
-                    <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
-                    <h3 class="ice-cream__name">Strawberry Gem</h3>
-                    <p class="ice-cream__description">fruity and fresh</p>
-                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
-                </div>
-                <div class="card__ice-cream">
-                    <img class="ice-cream__img" src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
-                    <h3 class="ice-cream__name">Choco & Hazelnut</h3>
-                    <p class="ice-cream__description">rich sweet taste</p>
-                    <p class="ice-cream__price"><span class="price__numbers">$ 5 </span> / ball</p>
-                </div>
-                <div class="card__ice-cream">
-                    <img class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
-                    <h3 class="ice-cream__name">Blue Paradise</h3>
-                    <p class="ice-cream__description">sour and fruity</p>
-                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
-                </div>
-                <div class="card__ice-cream">
-                    <img class="ice-cream__img" src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
-                    <h3 class="ice-cream__name">Mango Dream§</h3>
-                    <p class="ice-cream__description">classic tropic taste</p>
-                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
-                </div>
-                <div class="card__ice-cream">
-                    <img class="ice-cream__img" src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
-                    <h3 class="ice-cream__name">Pistachio Heaven</h3>
-                    <p class="ice-cream__description">cream nutty flavor</p>
-                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
-                </div> -->
             </div>
-            <div class="mask-yellow-button">
-                <a class="mask-yellow-button__block" href="https://93qs8.weblium.site/menu">
+            <div class="mask-additional-button">
+                <a class="mask-additional-button__block" href="https://93qs8.weblium.site/menu">
                     <div class="block__text-style">Show Me More</div>
                 </a>
             </div>
