added wave img between sections

--- a/index.html
+++ b/index.html
@@ -402,6 +402,9 @@
 
         <!-- Mykhailo Popovych-->
         <section class="gallery">
+            <div class="wave-container">
+                <img class="wave-brand-color" src="img/gallery/wave-brand-color.svg" alt="wave">
+            </div>
             <div class="container">
                 <div class="gallery__header">
                     <h2 class="gallery__title">Gallery</h2>
