--- a/index.html
+++ b/index.html
@@ -16,31 +16,33 @@
     <!-- Olkhovyk Anastasiia -->
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-transparent container">
-            <a class="nav-item nav-link navbar-brand d-block d-lg-none" href="#">
-                <div class="header__nav-image">
-                    <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
-                </div>
-            </a>
-            <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav w-100 justify-content-between d-lg-flex">
-                    <div class="w-100 d-lg-flex justify-content-around">
-                        <a class="nav-item nav-link align-self-center" href="#">About us</a>
-                        <a class="nav-item nav-link align-self-center" href="#">Menu</a>
-                        <a class="nav-item nav-link align-self-center" href="#">Special</a>
+            <div class="container-fluid">
+                <a class="nav-item nav-link navbar-brand d-block d-lg-none" href="index.html">
+                    <div class="header__nav-image">
+                        <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                     </div>
-                    <a class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block" href="#">
-                        <div class="header__nav-image">
-                            <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
+                </a>
+                <div class="navbar-toggler" role="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="navbar-nav w-100 justify-content-between d-lg-flex">
+                        <div class="w-100 d-lg-flex justify-content-around">
+                            <a class="nav-item nav-link align-self-center" href="#">About us</a>
+                            <a class="nav-item nav-link align-self-center" href="#">Menu</a>
+                            <a class="nav-item nav-link align-self-center" href="#">Special</a>
                         </div>
-                    </a>
-                    <div class="w-100 d-lg-flex justify-content-around">
-                        <a class="nav-item nav-link align-self-center" href="#ingredients">Ingredients</a>
-                        <a class="nav-item nav-link align-self-center" href="#blog">Blog</a>
-                        <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
+                        <a class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block" href="#">
+                            <div class="header__nav-image">
+                                <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
+                            </div>
+                        </a>
+                        <div class="w-100 d-lg-flex justify-content-around">
+                            <a class="nav-item nav-link align-self-center" href="#ingredients">Ingredients</a>
+                            <a class="nav-item nav-link align-self-center" href="#blog">Blog</a>
+                            <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -517,11 +519,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js "
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js "
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV "
         crossorigin="anonymous"></script>
 </body>
 
