Add common template for titles block

--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
 
         <!-- Arsen Lisnychuk -->
         <section class="menu py-4" id="menu">
-            <div class="menu__text text-center d-flex flex-column align-items-center text-white py-2">
-                <h2 class="text__title p-1">Our menu</h2>
-                <p class="text__sub-title p-1">Featured Desserts & Treats</p>
-                <p class="text__welcome-text p-2">Welcome to the sweet tooth paradise!</p>
+            <div class="menu__text text">
+                <h2 class="text__title">Our menu</h2>
+                <p class="text__sub-title">Featured Desserts & Treats</p>
+                <p class="text__text">Welcome to the sweet tooth paradise!</p>
             </div>
             <div class="container p-4">
                 <ul class="menu__tab nav nav-tabs" id="menu-tab" role="tablist">
