change text classes on main page

--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
             </div>
         </nav>
         <section class="main-page container">
-            <h1 class="main-page__title"><span>Welcome to</span><br>
-                Mr. Snowman Cafe
-            </h1>
-            <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
-            </p>
+            <div class="text main-page-text">
+                <h1 class="text__sub-title"><span class="text__title">Welcome to</span><br>
+                    Mr. Snowman Cafe
+                </h1>
+                <p class="text__text">Handcrafting the most delicious ice cream since 1999.
+                </p>
+            </div>
             <div class="main-page__btn-flex">
                 <div class="main-page__about-cafe-button mask-additional-button__block">
                     <a href="#about-us" class="about-cafe-link block__text-style">About Cafe</a>
