--- a/index.html
+++ b/index.html
@@ -552,7 +552,10 @@
         <div class="footer">
             <div class="footer__welcome">
                 <img class="footer__mr-showman" src="img/footer/mr-snow-photo.svg" alt="footer__logo">
-                <p>Welcome to the sweetest place in our city! We offer handcrafted ice cream, desserts, and drinks.</p>
+                <div class="footer__text">
+                    <p>Welcome to the sweetest place in our city! We offer handcrafted ice cream,
+                        desserts, and drinks.</p>
+                </div>
                 <div class="footer__social__links">
                     <a href="#" class="facebook__link">
                         <img src="#" alt="facebook">
@@ -569,7 +572,7 @@
                 </div>
             </div>
             <div class="footer__navigation nav">
-                <h3>Navigation</h3>
+                <h3 class="footer__text__title">Navigation</h3>
 
                 <p><a href="#" class="nav__about-us">About us</a> </p>
                 <p><a href="#" class="nav__menu">Menu</a> </p>
@@ -577,20 +580,20 @@
                 <p><a href="#" class="nav__ingredients">Ingredients</a></p>
             </div>
             <div class="footer__support support">
-                <h3>Help & Support</h3>
+                <h3 class="footer__text__title">Help & Support</h3>
                 <p><a href="#" class="support__blog">Blog</a></p>
                 <p><a href="#" class="support__term">Terms & Conditions</a></p>
                 <p><a href="#" class="support__help">Help</a></p>
                 <p><a href="#" class="support__contact">Contacts</a></p>
             </div>
             <div class="footer__schedule-booking">
-                <h3 class="schedule">Opening Hours</h3>
+                <h3 class="footer__text__title">Opening Hours</h3>
                 <p class="schedule">Mon – Thu: 10:00 AM – 11 PM</p>
                 <p class="schedule__weekend">
                     Sat - Sun : 11:00 AM – 11 PM
                 </p>
-                <h3 class="book">Book a Table</h3>
-                <p class="book__number">+1 (234) 567 89 00</p>
+                <h3 class="footer__text__title">Book a Table</h3>
+                <p class="text__sub-title">+1 (234) 567 89 00</p>
             </div>
             <div class="footer__line"></div>
             <div class="footer__footer">
