fixing css footer

--- a/index.html
+++ b/index.html
@@ -552,7 +552,8 @@
         <div class="footer">
             <div class="footer__welcome">
                 <img class="footer__mr-showman" src="img/footer/mr-snow-photo.svg" alt="footer__logo">
-                <p class="welcome__text">Welcome to the sweetest place in our city! We offer handcrafted ice cream, desserts, and drinks.</p>
+                <p class="welcome__text">Welcome to the sweetest place in our city! We offer handcrafted ice cream,
+                    desserts, and drinks.</p>
                 <div class="footer__social-icons">
                     <a target="_blank" href="https://facebook.com/" class="social-icons__icon_1W1"><svg
                             class="si63ffa14877b8c9000dcd076ff45db39b99f0479da95d062fac68c4791677697362579 svgIcon_1J7 outlined_2wD darkTheme_3jZ"
