fix id ingredients problem, create about-header.css

--- a/about-us.html
+++ b/about-us.html
@@ -40,8 +40,8 @@
                             </div>
                         </a>
                         <div class="w-100 d-lg-flex justify-content-around">
-                            <a class="nav-item nav-link align-self-center" href="#ingredients">Ingredients</a>
-                            <a class="nav-item nav-link align-self-center" href="#blog">Blog</a>
+                            <a class="nav-item nav-link align-self-center" href="#">Ingredients</a>
+                            <a class="nav-item nav-link align-self-center" href="#">Blog</a>
                             <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
                         </div>
                     </div>
