Add menu html and style files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="navbar-nav w-100 justify-content-between d-lg-flex">
                         <div class="w-100 d-lg-flex justify-content-around">
                             <a class="nav-item nav-link align-self-center" href="about-us.html">About us</a>
-                            <a class="nav-item nav-link align-self-center" href="#">Menu</a>
+                            <a class="nav-item nav-link align-self-center" href="menu.html">Menu</a>
                             <a class="nav-item nav-link align-self-center" href="#">Special</a>
                         </div>
                         <a class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block" href="#">
