--- a/index.html
+++ b/index.html
@@ -658,8 +658,8 @@
             </div>
             <div class="footer__line"></div>
             <div class="footer__footer">
-                <p> ©Created by Team №4</p>
-                <p>All rights Reserved</p>
+                <p class="footer__footer_text"> ©Created by Team №4</p>
+                <p class="footer__footer_text-two">All rights Reserved</p>
             </div>
         </div>
 
