made html and css staff block

--- a/about-us.html
+++ b/about-us.html
@@ -53,7 +53,42 @@
         </div>
     </header>
     <main>
-
+        <!--Mykhailo Popovych-->
+        <section class="staff">
+            <div class="container">
+                <div class="staff__text-block">
+                    <div class="staff__header text">
+                        <h2 class="text__title">Our staff</h2>
+                        <p class="text__sub-title ">Meet Our Team</p>
+                        <p class="text__text">Our staff is our pride. We are happy to welcome new members of
+                            our
+                            family.</p>
+                    </div>
+                    <div class="staff__text">
+                        <p>Our main qualities are respect for customers, cheerfulness, and willingness to work hard to
+                            provide the best service for cafe guests.</p>
+                    </div>
+                    <div class="main-btn">
+                        <a href="#" class="main-btn__text">Send SV</a>
+                    </div>
+                </div>
+                <div class="staff__carousel">
+                    <div class="staff__carousel__workers workers">
+                        <img src="img/about-us-second-page/jane-woss.png" alt="Jane Woss">
+                        <p class="workers__name">Jane Woss</p>
+                    </div>
+                    <div class="staff__carousel__workers workers">
+                        <img src="img/about-us-second-page/tomas-jackson.png" alt="Tomas Jackson">
+                        <p class="workers__name">Tomas Jackson</p>
+                    </div>
+                    <div class="staff__carousel__workers workers">
+                        <img src="img/about-us-second-page/eloise-birkenstone.png" alt="Eloise Birkenstone">
+                        <p class="workers__name">Eloise Birkenstone</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
     <footer>
 
