--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
                     <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="navbar-nav w-100 justify-content-between d-lg-flex">
+                    <div class="navbar-nav w-100 justify-content-around d-lg-flex">
                         <div class="w-100 d-lg-flex justify-content-around">
                             <a class="nav-item nav-link align-self-center" href="#">About us</a>
                             <a class="nav-item nav-link align-self-center" href="#">Menu</a>
