Update add wave to footer

--- a/menu.html
+++ b/menu.html
@@ -55,6 +55,58 @@
                 <p class="text__sub-title">Ice Cream</p>
                 <p class="text__text">Select your favorite taste of our ice cream.</p>
             </div>
+            <div class="ice-cream__products products">
+                <div class="products__product product">
+                    <!-- <div class="col">
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/lemon-lime.png" alt="Lemon & Lime image" class="product-img">
+                        </div>
+                    </div>
+                    <div class="col">
+
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/blackberry.png" alt="Blackberry image" class="product-img">
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/mango.png" alt="Mango image" class="product-img">
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/lavender.png" alt="Lavender image" class="product-img">
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/vanilla.png" alt="Vanilla image" class="product-img">
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/chocolate.png" alt="Chocolate image" class="product-img">
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/strawberry.png" alt="Strawberry image" class="product-img">
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product-container">
+                            <img src="img/menu/ice-creams/pistachio.png" alt="Pistachio image" class="product-img">
+
+                        </div>
+                    </div> -->
+                </div>
+            </div>
         </section>
         <section class="desserts">
             <div class="desserts__text text">
@@ -73,7 +125,7 @@
     </main>
     <footer>
         <div class="footer__wave-container">
-            <img class="footer-wave-brand-color" src="img/gallery/wave-brand-color.svg" alt="wave">
+            <img class="footer-wave-brand-color" src="img/blog/mobile-wave.svg" alt="wave">
         </div>
         <div class="footer">
             <div class="footer__welcome">
