add underline to links in header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-transparent container">
             <div class="container-fluid">
-                <a class="nav-item nav-link navbar-brand d-block d-lg-none" href="index.html">
+                <a class=" a-logo nav-item nav-link navbar-brand d-block d-lg-none" href="index.html">
                     <div class="header__nav-image">
                         <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                     </div>
@@ -33,7 +33,8 @@
                             <a class="nav-item nav-link align-self-center" href="menu.html">Menu</a>
                             <a class="nav-item nav-link align-self-center" href="#">Special</a>
                         </div>
-                        <a class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block" href="#">
+                        <a class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
+                            href="#">
                             <div class="header__nav-image">
                                 <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                             </div>
