--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-transparent container">
             <div class="container-fluid">
-                <a class="nav-item nav-link navbar-brand d-block d-lg-none" href="index.html">
+                <a class=" a-logo nav-item nav-link navbar-brand d-block d-lg-none" href="index.html">
                     <div class="header__nav-image">
                         <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                     </div>
@@ -27,21 +27,21 @@
                     <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="navbar-nav w-100 justify-content-around d-lg-flex">
+                    <div class="navbar-nav w-100 justify-content-between d-lg-flex">
                         <div class="w-100 d-lg-flex justify-content-around">
-                            <a class="nav-item nav-link align-self-center" href="#">About us</a>
-                            <a class="nav-item nav-link align-self-center" href="#">Menu</a>
+                            <a class="nav-item nav-link align-self-center" href="about-us.html">About us</a>
+                            <a class="nav-item nav-link align-self-center" href="menu.html">Menu</a>
                             <a class="nav-item nav-link align-self-center" href="#">Special</a>
                         </div>
-                        <a class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
-                            href="index.html">
+                        <a class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
+                            href="#">
                             <div class="header__nav-image">
                                 <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                             </div>
                         </a>
                         <div class="w-100 d-lg-flex justify-content-around">
-                            <a class="nav-item nav-link align-self-center" href="#">Ingredients</a>
-                            <a class="nav-item nav-link align-self-center" href="#">Blog</a>
+                            <a class="nav-item nav-link align-self-center" href="#ingredients">Ingredients</a>
+                            <a class="nav-item nav-link align-self-center" href="#blog">Blog</a>
                             <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
                         </div>
                     </div>
@@ -95,7 +95,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <script src="js/abot-us-carousel.js"></script>    
+    <script src="js/abot-us-carousel.js"></script>
+    <script src="js/burger-menu.js"></script>
 </body>
 
 </html>
