add function that closes burger menu when click on a

--- a/about-us.html
+++ b/about-us.html
@@ -34,14 +34,14 @@
                             <a class="nav-item nav-link align-self-center" href="#">Special</a>
                         </div>
                         <a class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
-                            href="#">
+                            href="index.html">
                             <div class="header__nav-image">
                                 <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
                             </div>
                         </a>
                         <div class="w-100 d-lg-flex justify-content-around">
-                            <a class="nav-item nav-link align-self-center" href="#">Ingredients</a>
-                            <a class="nav-item nav-link align-self-center" href="#">Blog</a>
+                            <a class="nav-item nav-link align-self-center" href="index.html#ingredients">Ingredients</a>
+                            <a class="nav-item nav-link align-self-center" href="index.html#blog">Blog</a>
                             <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
                         </div>
                     </div>
