--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             <p class="text__we-have">From strawberry to coconut, we have them all!</p>
         </div>
         <div class="tastes__cards">
-            <button class="cards__prev-slide"><</button>
+            <button class="cards__prev-slide">icons</button>
             <div class="cards__carousel"></div>
-            <button class="cards__next-slide">></button>
+            <button class="cards__next-slide">icons</button>
         </div>
         <div class="mask-additional-button">
             <a class="mask-additional-button__block" href="https://93qs8.weblium.site/menu">
