add wave to about-us section

--- a/index.html
+++ b/index.html
@@ -448,6 +448,9 @@
 
         <!-- Reznik Anastasiia -->
         <section class="about-us" id="about-us">
+            <div class="wave-container-about-us">
+            <img class="wave_brand_color" src="img/about-us/about-us-wave.svg" alt="Wave brand color">
+            </div>
             <h2 class="about-us__title">About Us</h2>
             <p class="about-us__sub-title">Our Story</p>
             <p class="about-us__text">Our mission is to offer the best experience and the tastiest desserts to our
